Implement: - Error handling, - Image zooming, Fix: - website tiles long loading

--- a/submodules/Base/Sources/Base/Resources/Localization/Base.lproj/Localizable.strings
+++ b/submodules/Base/Sources/Base/Resources/Localization/Base.lproj/Localizable.strings
@@ -33,3 +33,7 @@
 "pinview.button" = "Join";
 "pinview.wrongpasswordMessage" = "Wrong password\nTry again";
 
+// Errors
+
+"error.defaulttitle" = "Error";
+"error.defaultButtonTitle" = "OK";
